changes at build.properties
project.name, library.category, library.keywords etc.

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -72,7 +72,7 @@ ant.description=ProcessingLibs Ant build file.
 # Project details.
 # Give your library a name.
 
-project.name=YourLibrary
+project.name=csvP5
 
 
 # Use 'normal' or 'fast' as value for project.compile.
@@ -112,7 +112,7 @@ library.url=http://yourlibraryname.com
 # If a value other than those listed is used, your library will listed as 
 # "Other".
 
-library.category=Other
+library.category=Data
 
 
 # A short sentence (or fragment) to summarize the library's function. This will 
@@ -121,7 +121,7 @@ library.category=Other
 # like mentioning that it's a library. This should start with a capitalized 
 # letter, and end with a period.
 
-library.sentence=A collection of utilities for solving this and that problem.
+library.sentence=Reading and writing CSV(Character Separated Values) Files
 
 
 # Additional information suitable for the Processing website. The value of
@@ -135,7 +135,7 @@ library.paragraph=
 # Set the source code repository for your project.
 # Recommendations for storing your source code online are Google Code or GitHub.
 
-source.host=Google Code
+source.host=GitHub
 source.url=http://code.google.com/p/yourProject
 source.repository=http://code.google.com/p/yourProject/source/browse/
 
@@ -156,7 +156,7 @@ library.prettyVersion=0.1.1
 
 library.copyright=(C) 2012
 library.dependencies=?
-library.keywords=?
+library.keywords=CSV, Character Separated Values
 
 tested.platform=osx,windows
 tested.processingVersion=1.5
