--- a/resources/build.properties
+++ b/resources/build.properties
@@ -94,8 +94,8 @@ project.compile=normal
 # If you need more control, you can edit web/index.html and
 # web/library.properties directly.
 
-author.name=Your Name
-author.url=http://yoururl.com
+author.name=Tim Pulver, Paul Vollmer
+author.url=http://www.fh-potsdam.de
 
 
 # Set the web page for your library.
@@ -121,7 +121,7 @@ library.category=Data
 # like mentioning that it's a library. This should start with a capitalized 
 # letter, and end with a period.
 
-library.sentence=Reading and writing CSV(Character Separated Values) Files
+library.sentence=Reading CSV(Character Separated Values) Files
 
 
 # Additional information suitable for the Processing website. The value of
@@ -136,8 +136,8 @@ library.paragraph=
 # Recommendations for storing your source code online are Google Code or GitHub.
 
 source.host=GitHub
-source.url=http://code.google.com/p/yourProject
-source.repository=http://code.google.com/p/yourProject/source/browse/
+source.url=https://github.com/WrongEntertainment/csvP5
+source.repository=https://github.com/WrongEntertainment/csvP5/tree/master/src
 
 
 # The current version of your library. 
