--- a/resources/build.properties
+++ b/resources/build.properties
@@ -101,7 +101,7 @@ author.url=http://www.fh-potsdam.de
 # Set the web page for your library.
 # This is NOT a direct link to where to download it.
 
-library.url=http://yourlibraryname.com
+library.url=https://wrongentertainment.github.com/csvP5
 
 
 # Set the category of your library. This must be one (or many) of the following:
