--- a/resources/build.properties
+++ b/resources/build.properties
@@ -151,7 +151,7 @@ library.version=1
 # The version as the user will see it. 
 # If blank, the library.version attribute will be used here.
 
-library.prettyVersion=0.1.2dev
+library.prettyVersion=0.1.2b
 
 
 library.copyright=(C) 2012
