--- a/resources/build.properties
+++ b/resources/build.properties
@@ -101,7 +101,7 @@ author.url=http://www.fh-potsdam.de
 # Set the web page for your library.
 # This is NOT a direct link to where to download it.
 
-library.url=https://wrongentertainment.github.com/csvP5
+library.url=https://subtub.github.com/csvP5
 
 
 # Set the category of your library. This must be one (or many) of the following:
@@ -136,8 +136,8 @@ library.paragraph=
 # Recommendations for storing your source code online are Google Code or GitHub.
 
 source.host=GitHub
-source.url=https://github.com/WrongEntertainment/csvP5
-source.repository=https://github.com/WrongEntertainment/csvP5/tree/master/src
+source.url=https://github.com/subtub/csvP5
+source.repository=https://github.com/subtub/csvP5/tree/master/src
 
 
 # The current version of your library. 
@@ -156,7 +156,7 @@ library.prettyVersion=0.1.2b
 
 library.copyright=(C) 2012
 library.dependencies=?
-library.keywords=CSV, Character Separated Values
+library.keywords=CSV, Character Separated Values, Tables
 
 tested.platform=osx,windows
 tested.processingVersion=1.5
