build.properties update build.properties and tested.processingVersion

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -154,12 +154,12 @@ library.version=1
 library.prettyVersion=0.1.2b
 
 
-library.copyright=(C) 2012
+library.copyright=(C) 2012-2013
 library.dependencies=?
 library.keywords=CSV, Character Separated Values, Tables
 
 tested.platform=osx,windows
-tested.processingVersion=1.5
+tested.processingVersion=2.0b7
 
 
 # Include javadoc references into your project's javadocs.
